# conway

./: .gitignore  CMakeLists.txt  README.md
include/: grid.hpp
src/: conway  grid.cpp  main.cpp
